SERVER-48022 Cleanup infrastructure log lines in mongo/util